name:                reanimateMe02
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mkDoku/reanimateMe02
license:             BSD3
license-file:        LICENSE
author:              Sascha Bubeck
maintainer:          bubecksascha@t-online.de
copyright:           2020 Sascha Bubeck
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable reanimateMe02
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , reanimate
                     , reanimate-svg
                     , linear
                     , text
